@startuml LostCities UML
title Base de données - Lost Cities: Le Duel 🗃️

skinparam class {
  BackgroundColor #FDF6E3
  ArrowColor #268BD2
  BorderColor #657B83
  FontName "Segoe UI"
}

'-------------------------------
class User {
  +id: INTEGER [PK]
  +username: TEXT
  +email: TEXT
  +password: TEXT
  +avatar_url: TEXT
  +bio: TEXT
  +created_at: TIMESTAMP
}

class Game {
  +id: INTEGER [PK]
  +player1_id: INTEGER [FK → User]
  +player2_id: INTEGER [FK → User]
  +status: TEXT ("waiting", "in_progress", "finished")
  +winner_id: INTEGER [FK → User, nullable]
  +score_player1: INTEGER
  +score_player2: INTEGER
  +started_at: TIMESTAMP
  +ended_at: TIMESTAMP
  +settings_id: INTEGER [FK → GameSettings]
}

class GameSettings {
  +id: INTEGER [PK]
  +use_purple_cards: BOOLEAN
  +other_variants: TEXT
}

class Move {
  +id: INTEGER [PK]
  +game_id: INTEGER [FK → Game]
  +player_id: INTEGER [FK → User]
  +turn_number: INTEGER
  +action: TEXT
  +card_played: TEXT
  +pile_color: TEXT
  +timestamp: TIMESTAMP
}

class ChatMessage {
  +id: INTEGER [PK]
  +game_id: INTEGER [FK → Game, nullable]
  +sender_id: INTEGER [FK → User]
  +message: TEXT
  +timestamp: TIMESTAMP
}

class Leaderboard {
  +id: INTEGER [PK]
  +user_id: INTEGER [FK → User]
  +score: INTEGER
  +month: INTEGER
  +year: INTEGER
  +created_at: TIMESTAMP
}

'-------------------------------
User "1" -- "0..*" Game : joue
Game "1" -- "0..*" Move : contient
Game "1" -- "0..*" ChatMessage : lié à
User "1" -- "0..*" ChatMessage : envoie
User "1" -- "0..*" Leaderboard : classé dans
Game "1" -- "1" GameSettings : configuration
Move "1" -- "1" User : joué par

@enduml
